--- a/_sass/_defaults.scss
+++ b/_sass/_defaults.scss
@@ -4,7 +4,7 @@
 /*#       All ressources an properties can be modified. Modify them on css/main.scss       #*/
 /*##########################################################################################*/
 
-
+//#LEO
 
 
 
