--- a/_sass/_defaults.scss
+++ b/_sass/_defaults.scss
@@ -4,7 +4,7 @@
 /*#       All ressources an properties can be modified. Modify them on css/main.scss       #*/
 /*##########################################################################################*/
 
-//#LEO
+
 
 
 
@@ -90,3 +90,7 @@ $footer-background-color          : black;
 $footer-text-color                : grey;
 $footer-link-color                : $link-color;
 $footer-link-hover-color          : $link-color-hover;
+
+
+
+//#END
